# django-stripe-payment

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: settings.py
payments/: admin.py  models.py  urls.py  views.py
payments/migrations/: 0001_initial.py  0002_order_orderitem.py  0003_discount_tax_order_discount_order_tax.py  0004_remove_discount_stripe_coupon_id_and_more.py
payments/static/payments/css/: styles.css
payments/templates/: index.html  item_checkout.html  item_detail.html  order_checkout.html  order_detail.html  payment_success.html
