[project]
name = "django-stripe-payment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.4",
    "gunicorn>=23.0.0",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.2.2",
    "stripe>=15.1.0",
    "whitenoise>=6.9.0",
]
